# Apollo

./: CMakeLists.txt  main.cpp
engine/include/apollo/: animation.h  apollo.h  audio.h  camera.h  chrono.h  entity.h  font.h  image.h  input.h  key.h  keys.def  mesh.h  renderer.h  resources.h  scene.h  shader.h  sketch.h  spritebatch.h  texture.h  uvrect.h  window.h
engine/src/: animation.cpp  audio.cpp  camera.cpp  chrono.cpp  entity.cpp  entry.cpp  font.cpp  image.cpp  input.cpp  mesh.cpp  renderer.cpp  resources.cpp  scene.cpp  shader.cpp  sketch.cpp  spritebatch.cpp  texture.cpp  window.cpp
sandbox/: game.cpp  game.h  main.cpp  player.cpp  player.h
shaders/: batch.glsl  debug.glsl  text.glsl  triangle.glsl
src/: entity.cpp  entity.h  main.cpp  mesh.h  shader.cpp  shader.h  window.cpp  window.h
